// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTypographyRootJssStyle() should return correct css for baseTextStyle: { font: 'some font styles' }, responsiveStyle: { fontSize: 'some breakpoint customizable font styles' }, align: left, color: primary, ellipsis: false and theme: light 1`] = `
{
  "color": "#010205",
  "font": "some font styles",
  "fontSize": "some breakpoint customizable font styles",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "margin": 0,
  "padding": 0,
  "textAlign": "left",
  "whiteSpace": "inherit",
}
`;

exports[`getTypographyRootJssStyle() should return correct css for baseTextStyle: {}, responsiveStyle: {}, align: center, color: contrast-high, ellipsis: false and theme: dark 1`] = `
{
  "color": "#AFB0B3",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "margin": 0,
  "padding": 0,
  "textAlign": "center",
  "whiteSpace": "inherit",
}
`;

exports[`getTypographyRootJssStyle() should return correct css for baseTextStyle: {}, responsiveStyle: {}, align: right, color: contrast-high, ellipsis: true and theme: light 1`] = `
{
  "color": "#535457",
  "letterSpacing": "normal",
  "listStyleType": "none",
  "margin": 0,
  "maxWidth": "100%",
  "overflow": "hidden",
  "padding": 0,
  "textAlign": "right",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getTypographySlottedJssStyle() should return correct JssStyle 1`] = `
{
  "color": "inherit",
  "fontFamily": "inherit",
  "fontSize": "inherit",
  "fontStyle": "inherit",
  "fontVariant": "inherit",
  "fontWeight": "inherit",
  "hyphens": "inherit",
  "letterSpacing": "inherit",
  "lineHeight": "inherit",
  "margin": "inherit",
  "overflowWrap": "inherit",
  "padding": "inherit",
  "textAlign": "inherit",
  "whiteSpace": "inherit",
  "wordWrap": "inherit",
}
`;
